Fix text alignment on first section of posts

--- a/src/app/components/single-column/_index.scss
+++ b/src/app/components/single-column/_index.scss
@@ -39,10 +39,6 @@
     .title {
       font-size: 36px;
     }
-
-    .content {
-      text-align: center;
-    }
   }
 
   &.intro {
